compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__type_parser_tests__global_pointer_declaration.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: reference_type
---
Variable {
    name: "SampleReference",
    data_type: DataTypeDefinition {
        data_type: PointerType {
            name: None,
            referenced_type: DataTypeReference {
                referenced_type: "INT",
            },
            auto_deref: None,
            type_safe: true,
            is_function: false,
        },
    },
}
