compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__type_parser_tests__multi_dimensional_variable_length_arrays_can_be_parsed-2.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: var
---
Variable {
    name: "y",
    data_type: DataTypeDefinition {
        data_type: ArrayType {
            name: None,
            bounds: ExpressionList {
                expressions: [
                    VlaRangeStatement,
                    VlaRangeStatement,
                    VlaRangeStatement,
                    VlaRangeStatement,
                ],
            },
            referenced_type: DataTypeReference {
                referenced_type: "INT",
            },
            is_variable_length: true,
        },
    },
}
