compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__type_parser_tests__simple_enum_type_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.user_types[0]"
---
UserTypeDeclaration {
    data_type: EnumType {
        name: Some(
            "SampleEnum",
        ),
        numeric_type: "DINT",
        elements: ExpressionList {
            expressions: [
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "red",
                        },
                    ),
                    base: None,
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "yellow",
                        },
                    ),
                    base: None,
                },
                ReferenceExpr {
                    kind: Member(
                        Identifier {
                            name: "green",
                        },
                    ),
                    base: None,
                },
            ],
        },
    },
    initializer: None,
    scope: None,
}
