compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__type_parser_tests__typed_enum_with_initial_values_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.user_types[0]"
---
UserTypeDeclaration {
    data_type: EnumType {
        name: Some(
            "SampleEnum",
        ),
        numeric_type: "INT",
        elements: ExpressionList {
            expressions: [
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "red",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralInteger {
                        value: 1,
                    },
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "yellow",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralInteger {
                        value: 2,
                    },
                },
                Assignment {
                    left: ReferenceExpr {
                        kind: Member(
                            Identifier {
                                name: "green",
                            },
                        ),
                        base: None,
                    },
                    right: LiteralInteger {
                        value: 4,
                    },
                },
            ],
        },
    },
    initializer: None,
    scope: None,
}
