compiler/plc_parser/src/parser/tests/snapshots/plc_parser__parser__tests__type_parser_tests__typed_inline_enum_with_initial_values_can_be_parsed.snap
---
source: src/parser/tests/type_parser_tests.rs
expression: "result.pous[0]"
---
POU {
    name: "prg",
    variable_blocks: [
        VariableBlock {
            variables: [
                Variable {
                    name: "x",
                    data_type: DataTypeDefinition {
                        data_type: EnumType {
                            name: None,
                            numeric_type: "INT",
                            elements: ExpressionList {
                                expressions: [
                                    Assignment {
                                        left: ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "red",
                                                },
                                            ),
                                            base: None,
                                        },
                                        right: LiteralInteger {
                                            value: 1,
                                        },
                                    },
                                    Assignment {
                                        left: ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "yellow",
                                                },
                                            ),
                                            base: None,
                                        },
                                        right: LiteralInteger {
                                            value: 2,
                                        },
                                    },
                                    Assignment {
                                        left: ReferenceExpr {
                                            kind: Member(
                                                Identifier {
                                                    name: "green",
                                                },
                                            ),
                                            base: None,
                                        },
                                        right: LiteralInteger {
                                            value: 4,
                                        },
                                    },
                                ],
                            },
                        },
                    },
                },
            ],
            variable_block_type: Local,
        },
    ],
    pou_type: Program,
    return_type: None,
    interfaces: [],
    properties: [],
}
